[Themes] Fix links in spoilers being visible on some themes
Also uses a more theme-appropriate color for them
Fixes #272

--- a/app/javascript/src/styles/base/_colors.scss
+++ b/app/javascript/src/styles/base/_colors.scss
@@ -112,9 +112,7 @@ $paginator-hover-background: $link-hover-color;
 // Spoilers
 $spoiler-color: black;
 $spoiler-background: black;
-$spoiler-link-color: black;
 $spoiler-hover-color: white;
-$spoiler-link-hover-color: white;
 
 // User Ranks
 $rank-admin-color: darken(orange, 5%);
